# digit.chalmers.it

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  image_convert.sh  index.html  nginx.conf  prod.docker-compose.yml
.github/workflows/: docker-image.yml
data/: members.json
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
src/: main.rs
static/css/: fab.css  index.css  member.css  members.css
static/digIT13/: eda.avif  glaz.avif  horv.avif  meddan.avif
static/digIT14/: cannonbait.avif  malm.avif  ndushi.avif  rekoil.avif  tejp.avif
static/digIT15/: hultner.avif  kalior.avif  kerp.avif  kritt.avif  neon.avif
static/digIT16/: ares.avif  g.avif  hjort.avif  holmus.avif  jeeppson.avif  palm.avif  vilddjur.avif
static/digIT17/: feffe.avif  frodo.avif  gurgy.avif  levis.avif  lumo.avif  nan.avif  tux.avif  xiaoming.avif
static/digIT18/: gurr.avif  iller.avif  jerge.avif  lp.avif  neonsky.avif  pi.avif  portals.avif  vidde.avif
static/digIT19/: earl_grey.avif  fläkt.avif  hoidi.avif  håll.avif  latte.avif  maggan.avif  mölle.avif  nox.avif
static/digIT20/: nemo.avif  rosen.avif  santa.avif  sponk.avif  swex.avif  sylle.avif  yoda.avif
static/digIT2013/: horv.avif  imax.avif
static/digIT2014/: meddan.avif
static/digIT2016/: hjort.avif  palm.avif  vilddjur.avif
static/digIT2017/: frodo.avif  gurgy.avif  levis.avif
static/digIT21/: temp.avif
templates/: fab.html.tera  index.ansi.html.tera  index.html.tera  member.html.tera  members.html.tera
(+40 files in other folders)
