[package]
name = "digit2021"
version = "0.1.0"
authors = ["Joakim yoda Anderlind"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0"

[dependencies.serde]
version = "1.0.125"
features = ["serde_derive"]

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["serve", "tera_templates"]